src/layouts/main/styles/markdown.less
@import 'document/document.less';

.md {

  a {

    color                  : var(--berry-blue);
    font-weight            : bold;

    &:hover {
      text-decoration: underline;
    }

    &:visited {

      color: var(--plum);

      @media (prefers-color-scheme: dark) {
        color: var(--plum-light);
      }

    }

  }

  abbr[title] {
    cursor         : help;
    text-decoration: underline currentcolor dotted;
  }

  .backlink {
    font-size: large;
  }

  cite {
    font-style: italic;
  }

  em {
    font-style: italic;
  }

  :is(h2, h3, h4, h5, h6) {
    padding-block : 0.5em 0em;
    padding-inline: 0.5rem;
  }

  h1 {
    font-size : xxx-large;
    text-align: center;
  }

  h2 {
    font-size  : xx-large;
    font-weight: bold;
  }

  h3 {
    font-size  : x-large;
    font-weight: bold;
  }

  li {
    padding: 0.125em 0.25em;
  }

  .list {
    margin-inline-start: 1.5em;
    padding            : var(--text-padding-lg);
  }

  ol {
    .list;
    list-style: decimal outside none;
  }

  > p, section > p, .p {
    padding: var(--text-padding);
  }

  ul.references-list {

    list-style : none;
    text-indent: -2em;

    li {
      padding: 0.25em 0em;
    }

  }

  strong {
    font-weight: bold;
  }

  ul {
    .list;
    list-style: disc outside none;
  }

}

